// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots renders a switch with appearance default, disabled=false, checked=false, fullWidth=false 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #000820;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
}

.emotion-1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #E1E1E8;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #FFFFFF;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance default, disabled=false, checked=false, fullWidth=true 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #000820;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #E1E1E8;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #FFFFFF;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance default, disabled=false, checked=true, fullWidth=false 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #000820;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
}

.emotion-1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #E1E1E8;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #FFFFFF;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance default, disabled=false, checked=true, fullWidth=true 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #000820;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #E1E1E8;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #FFFFFF;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance default, disabled=true, checked=false, fullWidth=false 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #000820;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  cursor: default;
  opacity: 0.4;
}

.emotion-1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #E1E1E8;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #FFFFFF;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    disabled=""
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance default, disabled=true, checked=false, fullWidth=true 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #000820;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  cursor: default;
  opacity: 0.4;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #E1E1E8;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #FFFFFF;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    disabled=""
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance default, disabled=true, checked=true, fullWidth=false 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #000820;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  cursor: default;
  opacity: 0.4;
}

.emotion-1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #E1E1E8;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #FFFFFF;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    disabled=""
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance default, disabled=true, checked=true, fullWidth=true 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #000820;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  cursor: default;
  opacity: 0.4;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #E1E1E8;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #FFFFFF;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    disabled=""
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance inverted, disabled=false, checked=false, fullWidth=false 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
}

.emotion-1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #FFFFFF;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #E1E1E8;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance inverted, disabled=false, checked=false, fullWidth=true 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #FFFFFF;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #E1E1E8;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance inverted, disabled=false, checked=true, fullWidth=false 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
}

.emotion-1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #FFFFFF;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #E1E1E8;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance inverted, disabled=false, checked=true, fullWidth=true 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #FFFFFF;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #E1E1E8;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance inverted, disabled=true, checked=false, fullWidth=false 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  cursor: default;
  opacity: 0.4;
}

.emotion-1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #FFFFFF;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #E1E1E8;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    disabled=""
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance inverted, disabled=true, checked=false, fullWidth=true 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  cursor: default;
  opacity: 0.4;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #FFFFFF;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #E1E1E8;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    disabled=""
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance inverted, disabled=true, checked=true, fullWidth=false 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  cursor: default;
  opacity: 0.4;
}

.emotion-1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #FFFFFF;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #E1E1E8;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    disabled=""
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders a switch with appearance inverted, disabled=true, checked=true, fullWidth=true 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  cursor: default;
  opacity: 0.4;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-2 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-3 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #FFFFFF;
  margin-left: 8px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #E1E1E8;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

<label
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
  <input
    class="emotion-2"
    disabled=""
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-3"
  >
    <div
      class="emotion-4"
    />
  </div>
</label>
`;

exports[`snapshots renders an empty switch 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #000820;
  cursor: pointer;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  opacity: 1;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #000820;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
}

.emotion-1 {
  border: 0;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.001;
  padding: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
}

.emotion-2 {
  -webkit-background-clip: content-box;
  background-clip: content-box;
  background-color: #06BDFC;
  border-radius: 12px;
  box-sizing: border-box;
  height: 24px;
  min-width: 34px;
  padding: 3px;
  position: relative;
  width: 34px;
  background-color: #06BDFC;
  margin-left: 0;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 6px;
  position: absolute;
  top: 6px;
  -webkit-transition: -webkit-transform 75ms linear;
  transition: transform 75ms linear;
  width: 12px;
  z-index: 1;
  background-color: #FFFFFF;
  -webkit-transform: translateX(10px);
  -moz-transform: translateX(10px);
  -ms-transform: translateX(10px);
  transform: translateX(10px);
}

<label
  class="emotion-0"
>
  <input
    aria-checked="true"
    aria-label="Test"
    class="emotion-1"
    role="switch"
    type="checkbox"
  />
  <div
    class="emotion-2"
  >
    <div
      class="emotion-3"
    >
      <svg
        aria-hidden="true"
        height="14"
        role="img"
        viewBox="0 0 18 18"
        width="14"
      >
        <title>
          Checkmark
        </title>
        <path
          d="M13.746 4.337a1.015 1.015 0 011.409-.099c.417.354.462.97.101 1.378l-7.13 8.047a1.015 1.015 0 01-1.483.03L2.771 9.67a.961.961 0 01.044-1.38 1.015 1.015 0 011.412.041l3.113 3.235 6.406-7.229z"
          fill="#06BDFC"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</label>
`;
